[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-ICT-AhujaSlock-92400133041"
version = "1.0.0"
description = "ICT traffic signal system project by Slock Ahuja"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

authors = [
  { name = "Slock Ahuja", email = "your.email@example.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]
